added collecting zip file contents before ScriptTask creation